--- a/public/SignUp.html
+++ b/public/SignUp.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>sign in</title>
-    <link href="./SignUp.css" rel="stylesheet" />
+    <link href="../assest/css/SignUp.css" rel="stylesheet" />
     <link
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
       rel="stylesheet"
@@ -86,7 +86,7 @@
         </div>
       </form>
     </div>
-    <script src="./SignUp.js"></script>
+    <script src="../assest/js/SignUp.js"></script>
     <script>
       const togglePasswordIcons = document.querySelectorAll(".fa-eye");
 
